# cognitord

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  test-docker.sh
docker/: ci-cd.sh  entrypoint-simple.sh  entrypoint.sh  example-config.json
dsrs-daemon/: Cargo.toml  Dockerfile
dsrs-daemon/docker/: README.md  test-docker.sh
dsrs-daemon/src/: main.rs
dsrs-daemon/systemd/: dsrs-daemon.service
src/: main.rs
systemd/: cognitord.service  cognitord.socket
tests/: integration_tests.rs
