[package]
name = "cognitord"
version = "0.1.0"
edition = "2021"
description = "Cognitord - DSRs LLM Processing Daemon"
authors = ["Cognitord Team"]
license = "MIT"
repository = "https://github.com/awdemos/cognitord"
rust-version = "1.80"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# dsrs = { package = "dspy-rs", version = "0.0.1-beta" }